# hands-and-objects

./: .gitignore  Makefile  README.md  pyproject.toml
hand_detection/: .gitignore  main.py
keypoint_estimation/: README.md  datamodule.py  inference.py  predict.py  system.py  train.py
keypoint_estimation/datasets/: EDA.ipynb  __init__.py  datamodule.py  ego4d.py  handler.py  transform.py
keypoint_estimation/models/: __init__.py  analysis.ipynb  baseline.py  hybrid_vivit.py  i3d_resnet.py  lossfn.py  mctvivit.py  pcvivit.py  resnet.py  tsvivit.py  videomae.py  vivit.py
keypoint_estimation/models/lossfn/: __init__.py  asymmetric_loss.py  bce.py  ce.py  mse.py
keypoint_estimation/models/metrics/: __init__.py  keyframe_error.py  stats.py
objectness_classification/: Makefile  README.md  datamodule.py  dataset_module.py  inference.py  prediction.py  system.py  train.py
objectness_classification/datasets/: EDA.ipynb  __init__.py  datamodule.py  dataset.py  ego4d.py  egohos.py  oxford_iiit_pet.py  pascal_voc2012.py  transform.py
objectness_classification/models/: __init__.py  analysis.ipynb  baseline.py  faster_rcnn.py  model_analysis.ipynb  segmenter.py  setr.py  test.py  transunet.py  unet.py  vit.py
objectness_classification/models/lossfn/: __init__.py
pnr_temporal_localization/: dataset_module.py  datasets.py  evaluate.py  inference.py  json_handler.py  main.py  main_new.py  models.py  system.py  train.py  trainers.py  trainval.py
pnr_temporal_localization/data_preprocess/: hand_map.py
pnr_temporal_localization/models/: bmn.py  cnnlstm.py  hand_salience.py  i3d_resnet.py  slowfastperceiver.py  timesformer.py
pnr_temporal_localization/models/SFP/: oldslowfastpreceiver.py  (+1 more)
state_change_object_detection/: create_datafolder.py  dataset_module.py  inference.py  main.py  ssd.py  system.py  train.py
state_change_object_detection/models/: finetune_resnet.py
utils/: .env.sample  README.md  check_dataset.py  checker.py  ego4d.py  extractor.py  find_missing_clips.py  json_handler.py  model_visualization.py  show_log.py  video_extractor.py
utils/datasets/: seed.py
utils/ego4d/: video_extractor.py
utils/region_proposal/: rpn.py  sel_search.py
(+16 files in other folders)
