[tool.poetry]
name = "hands-and-objects"
version = "0.1.0"
description = ""
authors = ["pasca-l <shion.yamadate@keio.jp>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.7.0.68"
pandas = "^1.5.3"
polars = "^0.18.8"
matplotlib = "^3.7.0"
lightning = "^2.0.5"
tensorboard = "^2.12.0"
gitpython = "^3.1.31"
jupyter = "^1.0.0"
segmentation-models-pytorch = "^0.3.2"


[[tool.poetry.source]]
name = "torch_cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[tool.poetry.group.cuda]
optional = true

[tool.poetry.group.cuda.dependencies]
torch = {version = "^2.0.1+cu118", source = "torch_cu118"}
torchvision = {version = "^0.15.2+cu118", source = "torch_cu118"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
