[tool.poetry]
name = "hands-and-objects"
version = "0.1.0"
description = ""
authors = ["pasca-l <shion.yamadate@keio.jp>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.7.0.68"
pandas = "^1.5.3"
polars = "^0.18.8"
matplotlib = "^3.7.0"
torch = "^2.0.1"
torchvision = "^0.15.2"
lightning = "^2.0.5"
tensorboard = "^2.12.0"
gitpython = "^3.1.31"
jupyter = "^1.0.0"
torchmetrics = "^1.0.3"
timm = "<0.9.7"
segmentation-models-pytorch = "^0.3.3"
transformers = "^4.33.1"
einops = "^0.6.1"
pexpect = "^4.9.0"
scikit-learn = "^1.3.2"
seaborn = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
